# beyond_hate

./: .env  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  runpod_setup.sh
beyond_hate/: __init__.py  logger.py
beyond_hate/analysis/: bias_analysis.ipynb  bias_analysis.py  coarse_fine_relation.py  descriptive_stats.py  fine_grained_analysis.ipynb  utils.py  validate_annotations.py
beyond_hate/data_processing/: __init__.py  annotate.py  calibration.ipynb  download_hateful_meme_hf.py  hateful_meme_annotation.ipynb  hateful_meme_reannotation.ipynb  prepare_re_annotation.ipynb
beyond_hate/eval/: eval_coarse.py  eval_coarse_gpt.py  eval_fine.py  eval_fine_gpt.py  eval_gpt.ipynb  eval_joint.py  utils.py
beyond_hate/train/: __init__.py  eval_llava.ipynb  finetune_llava_hateful.ipynb  finetune_llava_hateful.py  finetune_llava_hateful_600.py  hparam_tuning_llava_hateful.py  hparam_tuning_llava_nuanced.py  inference_llava_hateful_600.py  inference_llava_nuanced.ipynb  prompts.py  train_coarse.py  train_fine.py  train_joint.py  utils.py  wandb_tuning_llava_nuanced.py
config/: coarse.yaml  default.yaml  eval.yaml  fine.yaml  joint.yaml  nuanced.yaml  runs.yaml
data/: images_to_annotate.txt  images_to_calibrate.txt  images_to_reannotate.txt  labels.jsonl  labels_calibration.jsonl  labels_reannotation.jsonl  labels_test.jsonl
hate_meme/: __init__.py
hate_meme/analysis/: bias_analysis.ipynb
hate_meme/data_processing/: __init__.py  annotate.py  download_hateful_meme_hf.py  hateful_meme_annotation.ipynb  hateful_meme_downoad_validation.ipynb  matched_img_ids.txt
hate_meme/train/: __init__.py  eval_llava.ipynb  finetune_llava_hateful.ipynb  finetune_llava_hateful.py  finetune_llava_hateful_600.py  hparam_tuning_llava_hateful.py  hparam_tuning_llava_nuanced.py  inference_llava_hateful_600.py  inference_llava_nuanced.ipynb  wandb_tuning_llava_nuanced.py
scripts/analysis/: bias_analysis.sh  coarse_fine_relation.sh  descriptive_stats.sh  (+1 more)
(+10 files in other folders)
