[tool.poetry]
name = "hate_meme"
version = "0.0.1"
description = "Beyond Hate: Differentiating Uncivil and Intolerant Speech in Multimodal Content Moderation"
authors = [
    "Nils A. Herrmann de Alba <nils_herrmann@outlook.de>",
    "Jingyi He <holly.he@tum.de>"
]
readme = "README.md"
license = "MIT"
packages = [{include = "hate_meme"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
huggingface-hub = "^0.34.4"
dotenv = "^0.9.9"

[tool.poetry.group.annotate.dependencies]
ipykernel = "^6.30.1"
ipywidgets = "^8.1.7"
pandas = "^2.3.1"
omegaconf = "^2.3.0"
pillow = "^11.3.0"

